--- a/WS/package.json
+++ b/WS/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0",
     "@angular/animations": "^8.2.8",
     "@angular/common": "^8.2.8",
     "@angular/compiler": "^8.2.8",
@@ -33,6 +34,7 @@
     "@angular/cli": "~8.3.6",
     "@angular/compiler-cli": "^8.2.8",
     "@angular/language-service": "^8.2.8",
+    "@types/googlemaps": "^3.38.0",
     "@types/jasmine": "~3.4.1",
     "@types/jasminewd2": "~2.0.7",
     "@types/node": "~12.7.8",
