--- a/WS/package.json
+++ b/WS/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^8.2.8",
     "@angular/platform-browser-dynamic": "^8.2.8",
     "@angular/router": "^8.2.8",
+    "agm-direction": "^0.7.9",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.9",
     "jquery": "^3.4.1",
